tests/negative/runtime/byteat_empty_string/input.ci
void main() {
    print(toString(byteAt("", 0)) + "\n");
}
